@@ -1,12 +1,13 @@
 package com.epi;
 
-import java.util.Arrays;
 import java.util.ArrayList;
-import java.util.LinkedList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.Random;
 
 public class SearchMaze {
+  // @include
   public static class Coordinate {
     public int x, y;
 
@@ -20,70 +21,77 @@ public class SearchMaze {
       if (this == o) {
         return true;
       }
+
       if (o == null || getClass() != o.getClass()) {
         return false;
       }
 
       Coordinate that = (Coordinate)o;
-
-      if (x != that.x) {
+      if (x != that.x || y != that.y) {
         return false;
       }
-      if (y != that.y) {
-        return false;
-      }
-
       return true;
     }
 
+    // clang-format off
     @Override
-    public String toString() {
-      return x + " " + y;
+    public int hashCode() {
+      return Objects.hash(x, y);
     }
+    // clang-format on
+
+    // @exclude
+    // clang-format off
+    @Override
+    public String toString() { return x + " " + y; }
+    // clang-format on
+    // @include
   }
 
-  // @include
-  public static LinkedList<Coordinate> searchMaze(List<List<Integer>> maze,
-                                                  Coordinate s, Coordinate e) {
-    LinkedList<Coordinate> path = new LinkedList<>();
-    maze.get(s.x).set(s.y, 1);
-    path.addFirst(s);
+  public static enum Color { WHITE, BLACK }
+
+  public static List<Coordinate> searchMaze(List<List<Color>> maze,
+                                            Coordinate s, Coordinate e) {
+    List<Coordinate> path = new ArrayList<>();
+    maze.get(s.x).set(s.y, Color.BLACK);
+    path.add(s);
     if (!searchMazeHelper(maze, s, e, path)) {
-      path.removeLast();
+      path.remove(path.size() - 1);
     }
     return path; // Empty path means no path between s and e.
   }
 
   // Performs DFS to find a feasible path.
-  private static boolean searchMazeHelper(List<List<Integer>> maze,
+  private static boolean searchMazeHelper(List<List<Color>> maze,
                                           Coordinate cur, Coordinate e,
-                                          LinkedList<Coordinate> path) {
+                                          List<Coordinate> path) {
     if (cur.equals(e)) {
       return true;
     }
 
-    List<? extends List<Integer>> shift =
-        Arrays.asList(Arrays.asList(0, 1), Arrays.asList(0, -1),
-                      Arrays.asList(1, 0), Arrays.asList(-1, 0));
+    List<List<Integer>> shift
+        = Arrays.asList(Arrays.asList(0, 1), Arrays.asList(0, -1),
+                        Arrays.asList(1, 0), Arrays.asList(-1, 0));
 
     for (List<Integer> s : shift) {
       Coordinate next = new Coordinate(cur.x + s.get(0), cur.y + s.get(1));
       if (isFeasible(next, maze)) {
-        maze.get(next.x).set(next.y, 1);
-        path.addLast(next);
+        maze.get(next.x).set(next.y, Color.BLACK);
+        path.add(next);
         if (searchMazeHelper(maze, next, e, path)) {
           return true;
         }
-        path.removeLast();
+        path.remove(path.size() - 1);
       }
     }
     return false;
   }
 
   // Checks cur is within maze and is a white pixel.
-  private static boolean isFeasible(Coordinate cur, List<List<Integer>> maze) {
-    return cur.x >= 0 && cur.x < maze.size() && cur.y >= 0 &&
-        cur.y < maze.get(cur.x).size() && maze.get(cur.x).get(cur.y) == 0;
+  private static boolean isFeasible(Coordinate cur, List<List<Color>> maze) {
+    return cur.x >= 0 && cur.x < maze.size() && cur.y >= 0
+        && cur.y < maze.get(cur.x).size()
+        && maze.get(cur.x).get(cur.y) == Color.WHITE;
   }
   // @exclude
 
@@ -98,17 +106,17 @@ public class SearchMaze {
         n = r.nextInt(30) + 1;
         m = r.nextInt(30) + 1;
       }
-      List<List<Integer>> maze = new ArrayList<>(n);
+      List<List<Color>> maze = new ArrayList<>(n);
       for (int i = 0; i < n; ++i) {
         maze.add(new ArrayList(m));
         for (int j = 0; j < m; ++j) {
-          maze.get(i).add(r.nextInt(2));
+          maze.get(i).add(Color.values()[r.nextInt(2)]);
         }
       }
       List<Coordinate> white = new ArrayList<>();
       for (int i = 0; i < n; ++i) {
         for (int j = 0; j < m; ++j) {
-          if (maze.get(i).get(j) == 0) {
+          if (maze.get(i).get(j) == Color.WHITE) {
             white.add(new Coordinate(i, j));
           }
           System.out.print(maze.get(i).get(j) + " ");
@@ -121,11 +129,11 @@ public class SearchMaze {
         int end = r.nextInt(white.size());
         System.out.println(white.get(start));
         System.out.println(white.get(end));
-        LinkedList<Coordinate> path =
-            searchMaze(maze, white.get(start), white.get(end));
+        List<Coordinate> path
+            = searchMaze(maze, white.get(start), white.get(end));
         if (!path.isEmpty()) {
-          assert(white.get(start).equals(path.peekFirst()) &&
-                 white.get(end).equals(path.peekLast()));
+          assert(white.get(start).equals(path.get(0))
+                 && white.get(end).equals(path.get(path.size() - 1)));
         }
         Coordinate prev = null;
         for (Coordinate curr : path) {
